--- a/gobrs-async-example/src/main/resources/application.yml
+++ b/gobrs-async-example/src/main/resources/application.yml
@@ -8,4 +8,6 @@ spring:
           content: "AService->BService,CService,FService; BService->FService,GService;"
         - name: "azh"
           content: "AService->BService,CService,FService; BService->FService,GService;"
+        - name: "test1"
+          content: "AService->BService->CService"
       task-interrupt: false #局部异常是否打断主流程
