--- a/gobrs-async-example/src/main/resources/application.yml
+++ b/gobrs-async-example/src/main/resources/application.yml
@@ -9,5 +9,5 @@ spring:
         - name: "azh"
           content: "AService->BService,CService,FService; BService->FService,GService;"
         - name: "test1"
-          content: "AService->BService->CService"
+          content: "AService->BService->DService;AService->CService->DService"
       task-interrupt: false #局部异常是否打断主流程
